# paper-terminal

./: Cargo.toml  README.md
src/: default.syncat  dirs.rs  main.rs  printer.rs  str_width.rs  table.rs  termpix.rs  words.rs
