[package]
name = "paper-terminal"
description = """
Writes a file to a paper in your terminal. Especially if that file is Markdown.
"""
repository = "https://github.com/foxfriends/paper-terminal"
homepage = "https://github.com/foxfriends/paper-terminal"
license = "MIT"
readme = "README.md"
version = "2.1.0"
authors = ["Cameron Eldridge <cameldridge+git@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]

[[bin]]
name = "paper"
path = "src/main.rs"

[dependencies]
structopt = "0.3"
terminal_size = "0.1"
pulldown-cmark = "0.8"
ansi_term = "0.12"
image = "0.23"
console = "0.13"
directories-next = "2.0"
syncat-stylesheet = { version = "2.1.4", features = ["ansi_term"] }
