[package]
name = "paper-terminal"
description = """
Writes a file to a paper in your terminal. Especially if that file is Markdown.
"""
repository = "https://github.com/foxfriends/paper-terminal"
homepage = "https://github.com/foxfriends/paper-terminal"
license = "MIT"
readme = "README.md"
version = "3.0.0"
authors = ["Cameron Eldridge <cam.eldridge@gmail.com>"]
edition = "2018"
categories = ["command-line-utilities"]

[[bin]]
name = "paper"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
terminal_size = "0.1"
pulldown-cmark = "0.8"
ansi_term = "0.12"
image = "0.24"
console = { version = "0.15", features = ["unicode-width"] }
directories-next = "2.0"
syncat-stylesheet = { version = "3.5.0", features = ["ansi_term"] }
unicode-width = "0.1"
cjk = "0.2"
